# lsgit

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  go.mod  main.go  setup.iss
.github/workflows/: release.yml
src/: main.rs
